# til24-main

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  README.md  dev.py  docker-compose.yml  pyproject.toml  til24-main.code-workspace
.devcontainer/: devcontainer.json
.devcontainer/hooks/: gcsfuse.yaml  postCreate.sh  postStart.sh  setupGCS.sh
src/: __init__.py  app.py  auto_manager.py  finals_manager.py  log.py  mock_manager.py  models_manager.py  participant_server.py
